deploy setup 2, forgot to add homepage

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "name": "vy6j3f",
   "description": null,
   "version": "0.0.0",
+  "homepage": "http://wy33.github.io/Web_Dev_Assignment5",
   "scripts": {
     "start": "react-scripts start",
     "predeploy" : "npm run build",
