--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.0"
   },
   "main": "/index.js",
@@ -14,8 +17,8 @@
   "homepage": "http://wy33.github.io/Web_Dev_Assignment5",
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
